Added stratum abundance function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(psu_density)
 export(psu_occurrence)
 export(ssu_density)
 export(ssu_occurrence)
+export(strat_abundance)
 export(strat_density)
 export(strat_occurrence)
