Added psu_biomass function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(domain_abundance)
 export(domain_density)
 export(domain_occurrence)
+export(psu_biomass)
 export(psu_density)
 export(psu_occurrence)
+export(ssu_biomass)
 export(ssu_density)
 export(ssu_occurrence)
 export(strat_abundance)
