Add stratum biomass function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(ssu_biomass)
 export(ssu_density)
 export(ssu_occurrence)
 export(strat_abundance)
+export(strat_biomass)
 export(strat_density)
 export(strat_occurrence)
