Add species filter function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(domain_occurrence)
 export(psu_biomass)
 export(psu_density)
 export(psu_occurrence)
+export(species_filter)
 export(ssu_biomass)
 export(ssu_density)
 export(ssu_occurrence)
