--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(domain_abundance)
 export(domain_biomass)
 export(domain_density)
 export(domain_occurrence)
+export(domain_total_biomass)
+export(protected_filter)
 export(psu_biomass)
 export(psu_density)
 export(psu_occurrence)
@@ -15,4 +17,5 @@ export(strat_abundance)
 export(strat_biomass)
 export(strat_density)
 export(strat_occurrence)
+export(strat_total_biomass)
 export(strata_filter)
