--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(count_filter)
 export(domain_abundance)
 export(domain_biomass)
 export(domain_density)
+export(domain_length_frequency)
 export(domain_occurrence)
 export(domain_total_biomass)
+export(getDomainDensity)
+export(getStratumDensity)
 export(length_filter)
 export(protected_filter)
 export(psu_biomass)
@@ -19,6 +22,7 @@ export(ssu_occurrence)
 export(strat_abundance)
 export(strat_biomass)
 export(strat_density)
+export(strat_length_frequency)
 export(strat_occurrence)
 export(strat_total_biomass)
 export(strata_filter)
