Added binned length capability to wrapper functions
Also added getStratumAbundance wrapper function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(domain_length_frequency)
 export(domain_occurrence)
 export(domain_total_biomass)
 export(getDomainDensity)
+export(getStratumAbundance)
 export(getStratumDensity)
 export(length_filter)
 export(protected_filter)
