Added domain abundance wrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(domain_density)
 export(domain_length_frequency)
 export(domain_occurrence)
 export(domain_total_biomass)
+export(getDomainAbundance)
 export(getDomainDensity)
 export(getStratumAbundance)
 export(getStratumDensity)
