Add stratum/domain biomass wrappers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(domain_length_frequency)
 export(domain_occurrence)
 export(domain_total_biomass)
 export(getDomainAbundance)
+export(getDomainBiomass)
 export(getDomainDensity)
 export(getStratumAbundance)
+export(getStratumBiomass)
 export(getStratumDensity)
 export(length_filter)
 export(protected_filter)
