Add wrappers for stratum total biomass and domain total biomass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(domain_total_biomass)
 export(getDomainAbundance)
 export(getDomainBiomass)
 export(getDomainDensity)
+export(getDomainTotalBiomass)
 export(getStratumAbundance)
 export(getStratumBiomass)
 export(getStratumDensity)
+export(getStratumTotalBiomass)
 export(length_filter)
 export(protected_filter)
 export(psu_biomass)
