Adds wrapper function for stratum length frequency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(getDomainTotalBiomass)
 export(getStratumAbundance)
 export(getStratumBiomass)
 export(getStratumDensity)
+export(getStratumLengthFrequency)
 export(getStratumTotalBiomass)
 export(length_filter)
 export(protected_filter)
