Adds domain_length frequency wrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(domain_total_biomass)
 export(getDomainAbundance)
 export(getDomainBiomass)
 export(getDomainDensity)
+export(getDomainLengthFrequency)
 export(getDomainTotalBiomass)
 export(getStratumAbundance)
 export(getStratumBiomass)
