--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getDomainBiomass)
 export(getDomainDensity)
 export(getDomainLengthFrequency)
 export(getDomainTotalBiomass)
+export(getSampleData)
 export(getStratumAbundance)
 export(getStratumBiomass)
 export(getStratumDensity)
