Adds getStratumData function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getDomainTotalBiomass)
 export(getSampleData)
 export(getStratumAbundance)
 export(getStratumBiomass)
+export(getStratumData)
 export(getStratumDensity)
 export(getStratumLengthFrequency)
 export(getStratumTotalBiomass)
