--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(getStratumData)
 export(getStratumDensity)
 export(getStratumLengthFrequency)
 export(getStratumTotalBiomass)
+export(getTaxonomicData)
 export(length_filter)
 export(protected_filter)
 export(psu_biomass)
