Adds getRvcData function
getRvcData function creates a lit usable in the summary statistic functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getDomainBiomass)
 export(getDomainDensity)
 export(getDomainLengthFrequency)
 export(getDomainTotalBiomass)
+export(getRvcData)
 export(getSampleData)
 export(getStratumAbundance)
 export(getStratumBiomass)
