Added occurrence wrappers and smoke tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(getDomainAbundance)
 export(getDomainBiomass)
 export(getDomainDensity)
 export(getDomainLengthFrequency)
+export(getDomainOccurrence)
 export(getDomainTotalBiomass)
 export(getRvcData)
 export(getSampleData)
@@ -19,6 +20,7 @@ export(getStratumBiomass)
 export(getStratumData)
 export(getStratumDensity)
 export(getStratumLengthFrequency)
+export(getStratumOccurrence)
 export(getStratumTotalBiomass)
 export(getTaxonomicData)
 export(length_filter)
