Add R >= 3.1 as a dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: Statistical package to retrieve analysis ready data and compute
     partners in South Florida and the Florida Keys.
 License: GPL-3
 LazyData: TRUE
+Depends: R (>= 3.1.0)
 Suggests: testthat
 Imports: plyr,
     RCurl
