--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getDomainDensity)
 export(getDomainLengthFrequency)
 export(getDomainOccurrence)
 export(getDomainTotalBiomass)
+export(getPSUBiomass)
 export(getRvcData)
 export(getSampleData)
 export(getStratumAbundance)
