addedtests and  wrapper to output PSU level abundance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getDomainDensity)
 export(getDomainLengthFrequency)
 export(getDomainOccurrence)
 export(getDomainTotalBiomass)
+export(getPSUAbundance)
 export(getPSUBiomass)
 export(getRvcData)
 export(getSampleData)
