added tests and wrapper function to output denisty at PSU level

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getDomainOccurrence)
 export(getDomainTotalBiomass)
 export(getPSUAbundance)
 export(getPSUBiomass)
+export(getPSUDensity)
 export(getRvcData)
 export(getSampleData)
 export(getStratumAbundance)
