update package version 1.1.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(getBenthicData)
 export(getDomainAbundance)
 export(getDomainBiomass)
 export(getDomainDensity)
+export(getDomainLbar)
 export(getDomainLengthFrequency)
 export(getDomainOccurrence)
 export(getDomainTotalBiomass)
