--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,6 @@ License: GPL-3
 LazyData: TRUE
 Depends: R (>= 3.1.0)
 Suggests: testthat
-Imports: plyr, httr
-RoxygenNote: 7.2.1
+Imports: plyr, httr, dplyr, magrittr
+RoxygenNote: 7.3.2
+Encoding: UTF-8
